--- a/main/styles.css
+++ b/main/styles.css
@@ -14,3 +14,27 @@ body{
     margin:15px;
     font-size: 30px;
 }
+.Calculator .number,
+.Calculator .operator,
+.Calculator .equal,
+.Calculator .decimal,
+.Calculator .clear {
+    border: 1px solid green;
+    border-radius: 10px;
+}
+.Calculator .btn:hover {
+    background-color: red;
+}
+.first-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.screen{
+    width:233px;
+    height:50px;
+    border:1px solid red;
+    margin-left:20px;
+    margin-top:14px;
+    border-radius: 10px;
+}
