--- a/main/styles.css
+++ b/main/styles.css
@@ -32,7 +32,7 @@ body{
 }
 .screen{
     width:233px;
-    height:50px;
+    height:60px;
     border:1px solid red;
     margin-left:20px;
     margin-top:14px;
@@ -41,4 +41,10 @@ body{
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
+}
+.previous{
+    font-size: 20px;
+}
+.current{
+    font-size: 24px;
 }
